crates/viewer/re_dataframe_ui/tests/snapshots/filter_tests__string_list@inner_null_starts_with_ab.snap
---
source: crates/viewer/re_dataframe_ui/tests/filter_tests.rs
expression: test_results
---
TestResult {
    op: String(
        StringFilter {
            operator: starts_with,
            query: "ab",
        },
    ),
    field: Field {
        name: "column",
        data_type: List(
            Field {
                name: "item",
                data_type: Utf8,
                nullable: true,
                dict_id: 0,
                dict_is_ordered: false,
                metadata: {},
            },
        ),
        nullable: false,
        dict_id: 0,
        dict_is_ordered: false,
        metadata: {},
    },
    unfiltered: ListArray
    [
      StringArray
    [
      "hello_ab",
      "a",
    ],
      StringArray
    [
      "b",
      null,
    ],
      StringArray
    [
      "ab",
      null,
    ],
    ],
    filtered: ListArray
    [
      StringArray
    [
      "ab",
      null,
    ],
    ],
}
